doc: updated create user swagger annotations and related models
