# internal/api/handler/user.go
@@ -27,18 +27,19 @@ func GetUserList(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(usersList)
 }
 
-// CreateUser godoc
-// @Summary Create user
-// @Tags Users
+// CreateUser 	godoc
+// @Summary 	Create user
+// @Tags 		Users
 // @Description Create a new user
-// @Accept json
-// @Produce json
-// @Param user body object true "user payload"
-// @Success 201 {object} object "created user"
-// @Failure 400 {object} map[string]interface{} "bad request"
-// @Failure 401 {object} map[string]interface{} "unauthorized"
-// @Security ApiKeyAuth
-// @Router /user [post]
+// @Accept 		json
+// @Produce 	json
+// @Param 		newUserDetails body model.CreateUserRequest true "new user payload"
+// @Param 		Authorization header string true "Bearer {token}"
+// @Success 	201 {object} model.CreateUserSuccessResponse "user created successfully"
+// @Failure 	400 {object} map[string]interface{} "bad request"
+// @Failure 	401 {object} map[string]interface{} "unauthorized"
+// @Security 	ApiKeyAuth
+// @Router 		/user [post]
 func CreateUser(c *fiber.Ctx) error {
 	var newUser model.User
 	if err := c.BodyParser(&newUser); err != nil {
@@ -89,6 +90,7 @@ func GetUserByID(c *fiber.Ctx) error {
 
 	return c.Status(fiber.StatusOK).JSON(user)
 }
+
 // UpdateUserByID godoc
 // @Summary Update user
 // @Tags Users
@@ -151,11 +153,11 @@ func DeleteUserByID(c *fiber.Ctx) error {
 
 	if err := service.DeleteUserByID(id); err != nil {
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-			"error" : err.Error(),
+			"error": err.Error(),
 		})
 	}
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message" : "user deleted successfully",
+		"message": "user deleted successfully",
 	})
 
 }
@@ -178,26 +180,27 @@ func AddMobileNumber(c *fiber.Ctx) error {
 	id, err := strconv.Atoi(userID)
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error" : "invalid user ID",
+			"error": "invalid user ID",
 		})
 	}
 	var mobileNumber model.MobileNumber
 	if err := c.BodyParser(&mobileNumber); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error" : "invalid request body",
- 		})
+			"error": "invalid request body",
+		})
 	}
 
 	if err := service.AddMobileNumber(id, mobileNumber); err != nil {
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-			"error" : err.Error(),
+			"error": err.Error(),
 		})
 	}
 
-   return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message" : "Mobile Number addded successfully",
-   })
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{
+		"message": "Mobile Number addded successfully",
+	})
 }
+
 // DeleteMobileNumber godoc
 // @Summary Delete mobile number
 // @Tags MobileNumbers
@@ -211,10 +214,10 @@ func AddMobileNumber(c *fiber.Ctx) error {
 // @Router /user/{id}/mobile-number/{number} [delete]
 func DeleteMobileNumber(c *fiber.Ctx) error {
 	userID := c.Params("id")
-	id , err := strconv.Atoi(userID)
+	id, err := strconv.Atoi(userID)
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error" : "invalid user ID",
+			"error": "invalid user ID",
 		})
 	}
 
@@ -222,11 +225,11 @@ func DeleteMobileNumber(c *fiber.Ctx) error {
 
 	if err := service.DeleteMobileNumber(id, number); err != nil {
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-			"error" : err.Error(),
+			"error": err.Error(),
 		})
 	}
 
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message" : "MobileNumber deleted successfully",
+		"message": "MobileNumber deleted successfully",
 	})
 }
